# reel-studio

./: .gitignore  DESIGN.md  LICENSE  PUSH_TO_GITHUB.md  README.md  cli.py  config.example.toml  main.py  pyproject.toml  requirements.txt
app/: __init__.py  asgi.py  router.py
app/config/: __init__.py
app/models/: __init__.py  const.py  schema.py
app/services/: __init__.py  llm.py  material.py  state.py  subtitle.py  task.py  templating.py  upload.py  video.py  voice.py
app/utils/: __init__.py  file_security.py  utils.py
resource/: README.md
styles/: README.md
templates/prompts/: README.md
templates/scripts/: README.md
webui/: Main.py
